--- a/main.html
+++ b/main.html
@@ -14,23 +14,21 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-	<!-- the entire body must be written by student -->
-	<h1>My Favorite Animal</h1>
+    
+    <!-- Main content -->
+    <h1>My Favorite Animal</h1>
     <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Grosser_Panda.JPG" alt="A Giant Panda sitting on a rock" />
+
+    <!-- Audio section -->
     <section>
-        <h2>3 Random Audios</h2>
-        <audio controls>
-            <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+        <h2>3 random audios</h2>
+        <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
             Your browser does not support the audio element.
         </audio>
-        <br>
-        <audio controls>
-            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+        <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
             Your browser does not support the audio element.
         </audio>
-        <br>
-        <audio controls>
-            <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+        <audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">
             Your browser does not support the audio element.
         </audio>
     </section>
